Repair tag moving behaviors.

--- a/src/main/python/cguis/design/info_dialog.ui
+++ b/src/main/python/cguis/design/info_dialog.ui
@@ -44,6 +44,11 @@
        <height>60</height>
       </size>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Color Set Information</string>
      </property>
