--- a/src/main/python/cguis/design/main_window.ui
+++ b/src/main/python/cguis/design/main_window.ui
@@ -64,9 +64,9 @@
     <addaction name="separator"/>
     <addaction name="actionSettings"/>
    </widget>
-   <widget class="QMenu" name="menuView">
+   <widget class="QMenu" name="menuWindow">
     <property name="title">
-     <string>View</string>
+     <string>Window</string>
     </property>
     <addaction name="actionRule"/>
     <addaction name="actionChannel"/>
@@ -86,7 +86,7 @@
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
-   <addaction name="menuView"/>
+   <addaction name="menuWindow"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
