--- a/src/main/python/cguis/design/scroll_cube.ui
+++ b/src/main/python/cguis/design/scroll_cube.ui
@@ -404,6 +404,9 @@
         <property name="maximum">
          <double>1.000000000000000</double>
         </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="2" column="0">
@@ -454,6 +457,9 @@
         </property>
         <property name="maximum">
          <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
         </property>
        </widget>
       </item>
